--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,11 @@ dependencies {
 //    implementation 'com.android.support:appcompat-v7:29.0.0-alpha1'
 
 
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+//    implementation 'androidx.appcompat:appcompat:1.0.2'
+
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
 
     testImplementation 'junit:junit:4.12'
