--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.pokapp">
 
-
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -11,13 +10,6 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <uses-feature android:name="android.hardware.camera.autofocus" />
-    <!--<uses-feature android:name="android.hardware.camera.autofocus"/>-->
-
-
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
-    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />-->
-    <!--<uses-permission android:name="android.permission.INTERNET" />-->
-    <!--<uses-permission android:name="android.permission.RECORD_AUDIO" />-->
 
     <application
         android:allowBackup="true"
@@ -26,9 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main2Activity"></activity>
-        <activity android:name=".CheckListActivity" />
-        <!--<activity android:name=".AddReminder" />-->
+        <activity android:name=".QRCodeGenerator"></activity>
+        <activity android:name=".Main2Activity" />
+        <activity android:name=".CheckListActivity" /> <!-- <activity android:name=".AddReminder" /> -->
         <activity android:name=".VoiceNoteActivity" />
         <activity android:name=".ReminderEntryClass" />
         <activity android:name=".MainActivity" />
@@ -36,7 +28,7 @@
         <activity android:name=".Calculator_Page" />
         <activity android:name=".StopWatchTimer" />
         <activity android:name=".ListDataActivity" />
-        <activity android:name=".EditDataActivity"/>
+        <activity android:name=".EditDataActivity" />
         <activity android:name=".EntryPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,8 +37,9 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES"
-            android:value="barcode"></meta-data>
+        <meta-data
+            android:name="com.google.android.gms.vision.DEPENDENCIES"
+            android:value="barcode" />
     </application>
 
 </manifest>
